CR-2001-08-23-1: Testsuite:
                 - removed add_proc_error call in compile_source procedure
                   (output buffer overflow error). Now the error is only
                   reported in the normal testsuite output. In case of
                   parallel compiling more architectures this error message
                   sometimes appears.

CR-2001-08-23-0: Testsuite:
                 - using cvs tag information for compile logfile name

JG-2001-08-22-0: (Issue# 43), host_aliases file was not implicitly used from 
                 standard location, option -a <path_to_host_aliases> worked.

AA-2001-08-22-0: - bugfix IZ 42, processing of projects/xprojects in SGEEE mode 

AA-2001-08-17-0: - enhanced scripts/snapshot.csh to use TAG as part of filename

JG-2001-08-13-0: fixed/improved handling of aimk option -opt (optimization)
                 at Ron Chen's suggestion.

AA-2001-08-09-0: - IZ 33, fixed duplicate free for scheduler conf dialogue code

AA-2001-08-07-0: - IZ 32, feature_is_enabled() used incorrectly

AH-2001-08-03-0: Accept -N job_name references in -hold_jid list 

JG-2001-08-02-0: Added external loadsensor script for platform aix43
                 (util/resources/loadsensors/ibm-loadsensor)

JG-2001-08-01-0: Testsuite: Test "cluster performance" failed on hosts reporting
                 a fully qualified hostname.

JG-2001-07-31-1: qrsh_starter: Handle (warn and ignore) empty environment
                 variable QRSH_WRAPPER

JG-2001-07-31-0: (Issue# 28): performance tests "cluster" and "scheduler" 
                 failed in sgeee systems

AA-2001-07-27-0: - Merge from branch: core dump fix for qmon_pe start/stop_proc_args

JG-2001-07-27-0: (Issue# 22): qdel to non existent job output inaccurate
                 error message

JG-2001-07-26-1: Maintrunc version:
                 - set Version string to "5.3 maintrunc"
                 - increased GDI version
